# MoleCraft

./: README.md  puzzles.py  pyproject.toml
src/: app.py  models.py  puzzles.py  save_manager.py
src/screens/: game.py  game_over.py  menu.py  pause.py
src/widgets/: puzzle_grid.py
